# unzig-lang

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-in-docker.sh  build.sh
spec/: grammar.y  syntax.zig  validate.sh
src/: ast.cpp  ast.hpp  ast_node.hpp  codegen.cpp  codegen.hpp  dotgen.cpp  dotgen.hpp  parser.cpp  parser.hpp  scope.cpp  scope.hpp  sema.cpp  sema.hpp  source.cpp  source.hpp  symbol.hpp  tokenizer.cpp  tokenizer.hpp  types.cpp  types.hpp  unzig_cmd.cpp
test/: code_example.hpp  test_codegen.cpp  test_dotgen.cpp  test_parser.cpp  test_scope.cpp  test_sema.cpp  test_source.cpp  test_tokenizer.cpp
